--- a/Tarea_2_Language_Modeling_y_Naïve_Bayes.ipynb
+++ b/Tarea_2_Language_Modeling_y_Naïve_Bayes.ipynb
@@ -335,7 +335,7 @@
         "  def fit(self, X):\n",
         "    # acá tu código para el entrenamiento del modelo\n",
         "\n",
-        "    # Se extrae el voabulario\n",
+        "    # Se extrae el vocabulario\n",
         "    self.vocab = set()\n",
         "    for words in X['words']:\n",
         "      self.vocab.update(words)\n",
@@ -348,23 +348,30 @@
         "    # Se determinan las probabilidades p(cj) para cada clase\n",
         "    self.class_probs = {}\n",
         "    for c_j in self.classes:\n",
+        "      # Se obtienen todos los documentos de la clase c_j\n",
         "      docs_j = X[ X['class_'] == c_j ]\n",
+        "      # Se calcula la log-probabilidad (Underflow prevention)\n",
         "      prob_c_j = np.log( len(docs_j) / total_docs )\n",
+        "\n",
         "      self.class_probs[c_j] = prob_c_j\n",
         "\n",
         "    # Se determinan las probabilidades p(wi|cj) para cada palabra y cada clase usando Laplace Smoothing\n",
         "    self.word_probs = {}\n",
         "    for c_j in self.classes:\n",
+        "      # Se obtienen los documentos doc_j\n",
         "      docs_j = X[ X['class_'] == c_j ]\n",
+        "      # Se construye el documento únido que contiene todos los doc_j\n",
         "      text_j = [word for words in docs_j['words'] for word in words]\n",
         "      n = len(text_j)\n",
         "\n",
         "      word_probs = {}\n",
         "      for w_k in self.vocab:\n",
+        "        # Se obtiene el número de ocurrencias de w_k en el Text_j\n",
         "        n_k = text_j.count(w_k)\n",
+        "        # Se calcula la log-probabilidad usando Laplace Smoothing\n",
         "        prob_wk_cj = np.log( ( n_k + self.alpha ) / ( n + self.alpha * len(self.vocab )) )\n",
         "        word_probs[w_k] = prob_wk_cj\n",
-        "      \n",
+        "\n",
         "      self.word_probs[c_j] = word_probs\n",
         "    \n",
         "    return self\n",
@@ -376,16 +383,22 @@
         "    # acá tu código para computar la predicción\n",
         "    predictions = []\n",
         "\n",
-        "    for words in X['words']:\n",
+        "    for doc in X['words']:\n",
         "      doc_probs = {}\n",
         "      for c_j in self.classes:\n",
-        "        class_prob = self.class_probs[c_j]\n",
+        "        # Se obtiene el prior\n",
+        "        prob_c_j = self.class_probs[c_j]\n",
+        "        # Se obtienen las probabilidades condicionales\n",
         "        word_probs = self.word_probs[c_j]\n",
-        "        doc_prob = class_prob\n",
-        "        for word in words:\n",
-        "          if word in word_probs:\n",
-        "            doc_prob += word_probs[word]\n",
+        "        # Se inicia la probabilidad del documento en la clase c_j como el prior\n",
+        "        doc_prob = prob_c_j\n",
+        "        for w_k in doc:\n",
+        "          if w_k in word_probs:\n",
+        "            # Si la palabra w_k está en las probabilidades, la sumamos (sumamos porque son log-probabilidades)\n",
+        "            doc_prob += word_probs[w_k]\n",
+        "        # Se guarda la probabilidad de pertenencia a la clase c_j    \n",
         "        doc_probs[c_j] = doc_prob\n",
+        "      # La clase predicha será el máximo\n",
         "      predicted_class = max(doc_probs, key = doc_probs.get)\n",
         "      predictions.append(predicted_class)\n",
         "\n",
@@ -393,25 +406,28 @@
         "    return predictions\n",
         "  \n",
         "  def predict_proba(self,X):\n",
+        "    # Chequea que fit ha sido ejecutado anteriormente\n",
+        "    check_is_fitted(self,['vocab', 'classes', 'class_probs', 'word_probs'])\n",
         "\n",
         "    probs = []\n",
-        "\n",
-        "    for words in X['words']:\n",
+        "    # Mismo procedimiento que con predict\n",
+        "    for doc in X['words']:\n",
         "      doc_probs = {}\n",
         "      for c_j in self.classes:\n",
-        "        class_prob = self.class_probs[c_j]\n",
+        "        prob_c_j = self.class_probs[c_j]\n",
         "        word_probs = self.word_probs[c_j]\n",
-        "        doc_prob = class_prob\n",
-        "        for word in words:\n",
-        "          if word in word_probs:\n",
-        "            doc_prob += word_probs[word]\n",
+        "        doc_prob = prob_c_j\n",
+        "        for w_k in doc:\n",
+        "          if w_k in word_probs:\n",
+        "            doc_prob += word_probs[w_k]\n",
         "        doc_probs[c_j] = doc_prob\n",
+        "      # Aquí la diferencia, por Underflow prevention, volvemos al expacio de probabilidades aplicando la exponencial y normalizamos para que la suma de 1\n",
         "      probs.append(\n",
         "          np.exp( list( doc_probs.values() ) ) / np.sum( np.exp( list( doc_probs.values() ) ) )\n",
         "      )\n",
         "    return probs    "
       ],
-      "execution_count": null,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -444,7 +460,7 @@
       "metadata": {
         "id": "JjTnFLDGyCEL"
       },
-      "execution_count": null,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -459,16 +475,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qN1SdLycuK4W",
-        "outputId": "78657222-5147-4b27-aa97-6798a9083149"
+        "outputId": "6633b087-ff64-449b-d93c-567ae20597ae"
       },
-      "execution_count": null,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
             "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
+            "[nltk_data]   Package punkt is already up-to-date!\n"
           ]
         }
       ]
@@ -514,9 +530,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b5ffe117-60f2-41d0-ef5b-48e6ee287d45"
+        "outputId": "b0b04b0d-9d6e-47e8-80f0-d4ed36b18dff"
       },
-      "execution_count": null,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
@@ -562,12 +578,12 @@
       ],
       "metadata": {
         "id": "UAx0t3zQx2PJ",
-        "outputId": "0a769c9d-4d15-4c4b-b617-5e408cdf381c",
+        "outputId": "bcfa7677-f915-4a7a-aafa-f4348755cb08",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
