--- a/Tarea_2_Language_Modeling_y_Naïve_Bayes.ipynb
+++ b/Tarea_2_Language_Modeling_y_Naïve_Bayes.ipynb
@@ -363,6 +363,14 @@
         "\n",
         "class MyMultinomialNB(BaseEstimator, ClassifierMixin):\n",
         "  def __init__(self, alpha=1.0):\n",
+        "    \"\"\"\n",
+        "        Constructor de la clase MyMultinomialNB.\n",
+        "\n",
+        "        Parameters\n",
+        "        ----------\n",
+        "        alpha : float, optional\n",
+        "            Coeficiente de Laplace Smoothing. Por defecto es 1.0.\n",
+        "    \"\"\"\n",
         "    # acá tu código para inicializar el clasificador\n",
         "    self.alpha = alpha\n",
         "    self.vocab = None\n",
@@ -371,6 +379,19 @@
         "    self.word_probs = None\n",
         "\n",
         "  def fit(self, X):\n",
+        "    \"\"\"\n",
+        "        Ajusta el modelo a los datos.\n",
+        "\n",
+        "        Parameters\n",
+        "        ----------\n",
+        "        X : pd.DataFrame\n",
+        "          Matriz con los textos y clases.\n",
+        "\n",
+        "        Returns\n",
+        "        -------\n",
+        "        self : object\n",
+        "          Retorna la instancia.\n",
+        "    \"\"\"\n",
         "    # acá tu código para el entrenamiento del modelo\n",
         "\n",
         "    # Se extrae el voabulario\n",
@@ -408,6 +429,17 @@
         "    return self\n",
         "\n",
         "  def predict(self, X):\n",
+        "    \"\"\"\n",
+        "        Realiza la clasificación en una matriz X.\n",
+        "        Parameters\n",
+        "        ----------\n",
+        "        X : pd.DataFrame\n",
+        "          Matriz con los textos y clases.\n",
+        "        Returns\n",
+        "        -------\n",
+        "        C : ndarray de forma (n_samples,)\n",
+        "          Valores predichos para X.\n",
+        "    \"\"\"\n",
         "    # Chequea que fit ha sido ejecutado anteriormente\n",
         "    check_is_fitted(self,['vocab', 'classes', 'class_probs', 'word_probs'])\n",
         "    \n",
@@ -428,6 +460,17 @@
         "    return predictions\n",
         "\n",
         "  def predict_proba(self,X):\n",
+        "    \"\"\"\n",
+        "        Devuelve estimaciones de probabilidad para el vector X.\n",
+        "        Parameters\n",
+        "        ----------\n",
+        "        X : pd.DataFrame\n",
+        "          Matriz con los textos y clases.\n",
+        "        Returns\n",
+        "        -------\n",
+        "        C : array-like of shape (n_samples, n_classes)\n",
+        "          Devuelve la probabilidad de las muestras para cada clase en el modelo.\n",
+        "    \"\"\"\n",
         "    # Chequea que fit ha sido ejecutado anteriormente\n",
         "    check_is_fitted(self,['vocab', 'classes', 'class_probs', 'word_probs'])\n",
         "\n",
@@ -449,8 +492,163 @@
         "      )\n",
         "    return probs    "
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "help(MyMultinomialNB())"
+      ],
+      "metadata": {
+        "id": "-64G_Avow7f1",
+        "outputId": "dbeacdda-a6b8-49e7-a316-e2fb4076ef57",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Help on MyMultinomialNB in module __main__ object:\n",
+            "\n",
+            "class MyMultinomialNB(sklearn.base.BaseEstimator, sklearn.base.ClassifierMixin)\n",
+            " |  MyMultinomialNB(alpha=1.0)\n",
+            " |  \n",
+            " |  Method resolution order:\n",
+            " |      MyMultinomialNB\n",
+            " |      sklearn.base.BaseEstimator\n",
+            " |      sklearn.base.ClassifierMixin\n",
+            " |      builtins.object\n",
+            " |  \n",
+            " |  Methods defined here:\n",
+            " |  \n",
+            " |  __init__(self, alpha=1.0)\n",
+            " |      Constructor de la clase MyMultinomialNB.\n",
+            " |      \n",
+            " |      Parameters\n",
+            " |      ----------\n",
+            " |      alpha : float, optional\n",
+            " |          Coeficiente de Laplace Smoothing. Por defecto es 1.0.\n",
+            " |  \n",
+            " |  fit(self, X)\n",
+            " |      Ajusta el modelo a los datos.\n",
+            " |      \n",
+            " |      Parameters\n",
+            " |      ----------\n",
+            " |      X : pd.DataFrame\n",
+            " |        Matriz con los textos y clases.\n",
+            " |      \n",
+            " |      Returns\n",
+            " |      -------\n",
+            " |      self : object\n",
+            " |        Retorna la instancia.\n",
+            " |  \n",
+            " |  predict(self, X)\n",
+            " |      Realiza la clasificación en una matriz X.\n",
+            " |      Parameters\n",
+            " |      ----------\n",
+            " |      X : pd.DataFrame\n",
+            " |        Matriz con los textos y clases.\n",
+            " |      Returns\n",
+            " |      -------\n",
+            " |      C : ndarray de forma (n_samples,)\n",
+            " |        Valores predichos para X.\n",
+            " |  \n",
+            " |  predict_proba(self, X)\n",
+            " |      Devuelve estimaciones de probabilidad para el vector X.\n",
+            " |      Parameters\n",
+            " |      ----------\n",
+            " |      X : pd.DataFrame\n",
+            " |        Matriz con los textos y clases.\n",
+            " |      Returns\n",
+            " |      -------\n",
+            " |      C : array-like of shape (n_samples, n_classes)\n",
+            " |        Devuelve la probabilidad de las muestras para cada clase en el modelo.\n",
+            " |  \n",
+            " |  ----------------------------------------------------------------------\n",
+            " |  Methods inherited from sklearn.base.BaseEstimator:\n",
+            " |  \n",
+            " |  __getstate__(self)\n",
+            " |  \n",
+            " |  __repr__(self, N_CHAR_MAX=700)\n",
+            " |      Return repr(self).\n",
+            " |  \n",
+            " |  __setstate__(self, state)\n",
+            " |  \n",
+            " |  get_params(self, deep=True)\n",
+            " |      Get parameters for this estimator.\n",
+            " |      \n",
+            " |      Parameters\n",
+            " |      ----------\n",
+            " |      deep : bool, default=True\n",
+            " |          If True, will return the parameters for this estimator and\n",
+            " |          contained subobjects that are estimators.\n",
+            " |      \n",
+            " |      Returns\n",
+            " |      -------\n",
+            " |      params : dict\n",
+            " |          Parameter names mapped to their values.\n",
+            " |  \n",
+            " |  set_params(self, **params)\n",
+            " |      Set the parameters of this estimator.\n",
+            " |      \n",
+            " |      The method works on simple estimators as well as on nested objects\n",
+            " |      (such as :class:`~sklearn.pipeline.Pipeline`). The latter have\n",
+            " |      parameters of the form ``<component>__<parameter>`` so that it's\n",
+            " |      possible to update each component of a nested object.\n",
+            " |      \n",
+            " |      Parameters\n",
+            " |      ----------\n",
+            " |      **params : dict\n",
+            " |          Estimator parameters.\n",
+            " |      \n",
+            " |      Returns\n",
+            " |      -------\n",
+            " |      self : estimator instance\n",
+            " |          Estimator instance.\n",
+            " |  \n",
+            " |  ----------------------------------------------------------------------\n",
+            " |  Data descriptors inherited from sklearn.base.BaseEstimator:\n",
+            " |  \n",
+            " |  __dict__\n",
+            " |      dictionary for instance variables (if defined)\n",
+            " |  \n",
+            " |  __weakref__\n",
+            " |      list of weak references to the object (if defined)\n",
+            " |  \n",
+            " |  ----------------------------------------------------------------------\n",
+            " |  Methods inherited from sklearn.base.ClassifierMixin:\n",
+            " |  \n",
+            " |  score(self, X, y, sample_weight=None)\n",
+            " |      Return the mean accuracy on the given test data and labels.\n",
+            " |      \n",
+            " |      In multi-label classification, this is the subset accuracy\n",
+            " |      which is a harsh metric since you require for each sample that\n",
+            " |      each label set be correctly predicted.\n",
+            " |      \n",
+            " |      Parameters\n",
+            " |      ----------\n",
+            " |      X : array-like of shape (n_samples, n_features)\n",
+            " |          Test samples.\n",
+            " |      \n",
+            " |      y : array-like of shape (n_samples,) or (n_samples, n_outputs)\n",
+            " |          True labels for `X`.\n",
+            " |      \n",
+            " |      sample_weight : array-like of shape (n_samples,), default=None\n",
+            " |          Sample weights.\n",
+            " |      \n",
+            " |      Returns\n",
+            " |      -------\n",
+            " |      score : float\n",
+            " |          Mean accuracy of ``self.predict(X)`` w.r.t. `y`.\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -482,7 +680,7 @@
       "metadata": {
         "id": "JjTnFLDGyCEL"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -497,9 +695,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qN1SdLycuK4W",
-        "outputId": "01eed982-694b-4fa6-b763-c3e3ef56f1d4"
+        "outputId": "6525be02-cd81-4143-a373-60c4d53fb8fa"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -552,9 +750,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d14ead0c-2c9f-4d43-96a3-0432003c8ad8"
+        "outputId": "63567ea9-23a0-4f41-94e3-dc59407b566c"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -603,15 +801,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "eb89306f-44db-47aa-cc11-1ea3139e4373"
+        "outputId": "c2e12e76-198a-4bdb-d3aa-0bd5a8a4925d"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "vocab:  {'Beijing', 'Macao', 'Japan', 'Shanghai', 'Tokyo', 'Chinese'}\n",
+            "vocab:  {'Macao', 'Shanghai', 'Tokyo', 'Beijing', 'Japan', 'Chinese'}\n",
             "\n",
             "Test probs:\n",
             "[0.68975861 0.31024139]\n",
@@ -659,7 +857,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3f2f247d-9471-4c93-e460-ad385c5e754d"
+        "outputId": "ef4d6c41-4cd3-4bb8-8862-3b105db22768"
       },
       "source": [
         "document = namedtuple(\n",
@@ -686,7 +884,7 @@
         "print(\"\\nDocumentos de prueba:\")\n",
         "print(X_test)"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -718,7 +916,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "01b53cf9-6a45-465d-9cc3-ed263f7be249"
+        "outputId": "181f67f5-3074-4ada-8e8f-db2afde87655"
       },
       "source": [
         "# Acá probarán su clasificador\n",
@@ -742,13 +940,13 @@
         "print('\\nTest predictions:')\n",
         "print('\\n'.join(['{} <- {}'.format(c, ' '.join(s)) for c, s in zip(my_clf.predict(X_test), X_test['words'])]))"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "vocab:  {'w01', 'w08', 'w02', 'w00', 'w03', 'w09', 'w04', 'w07', 'w05', 'w06'}\n",
+            "vocab:  {'w04', 'w07', 'w09', 'w05', 'w02', 'w06', 'w08', 'w00', 'w03', 'w01'}\n",
             "\n",
             "Test probs:\n",
             "[0.76018101 0.23981899]\n",
@@ -779,7 +977,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0eafcf2d-5587-41c6-dd7e-921e0dfe1e12"
+        "outputId": "831c7b3c-5f27-4925-e6b9-68f794c5e3b1"
       },
       "source": [
         "import nltk\n",
@@ -851,7 +1049,7 @@
         "print(\"\\nDocumentos de prueba:\")\n",
         "print(X_test2)"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -928,7 +1126,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "be149610-a88c-4408-e296-318c693cae17"
+        "outputId": "7e7e24f3-f0f2-40e6-b478-62b2ad3d09ad"
       },
       "source": [
         "# Acá probarán su clasificador y computaremos algunas métricas de evaluacion\n",
@@ -956,13 +1154,13 @@
         "print('\\n'.join(['{} <- {}'.format(c, ' '.join(s)) for c, s in zip(my_y_preds, X_test2['words'])]))\n",
         "print(classification_report(y_true=X_test2['class_'], y_pred=my_y_preds, target_names=['?', '+', '-']))"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "vocab:  109 {'tour', 'meat', 'long', 'often', 'everyday', 'with', 'a', 'is', 'this', 'm', 'lived', '?', 'today', 'Have', 'questions', 'come', 'from', 'she', 'Has', 'cinema', 'have', 'Does', 'at', 'in', 'dress', 'time', 'lot', 'enough', 'company', 'that', 'speaks', 'do', '61709832145', 'wife', 'has', 'UK', '6am', 'people', 'my', 'much', \"n't\", 'morning', 'not', 'there', 'Did', 'very', 'day', 'any', '’', 'and', 'live', 'told', 'does', 'meeting', 'She', 'had', 'you', 'many', 'came', 'exercises', 'children', 'phone', 'I', 'work', 'He', 'her', 'are', 'My', 'daily', 'here', \"'ll\", 'dating', 'old', 'number', 'make', 'back', 'They', 'advice', 'as', 'were', 'English', 'for', 'plenty', 'We', 'local', 'early', 'fast', 'be', 'guide', 'walks', 'Had', 'of', 'the', 'France', 'useful', 'eat', 'go', 'offer', 'us', 'did', 'money', 'What', 'How', 'Do', 'they', 'slowly', 'run', 'anyone', 'to'}\n",
+            "vocab:  109 {'’', 'Did', 'guide', 'What', 'go', 'exercises', 'today', 'us', '61709832145', 'is', 'were', 'I', 'number', 'her', 'dress', 'Has', 'from', 'do', 'day', 'and', 'plenty', 'came', 'come', 'How', 'everyday', 'meeting', 'children', 'long', 'the', 'walks', 'very', 'Does', 'are', 'has', '6am', 'often', 'that', 'cinema', 'be', 'of', 'm', 'any', 'lived', 'at', 'anyone', 'old', 'make', 'eat', 'Have', 'phone', \"'ll\", 'work', 'enough', 'a', 'she', 'not', 'English', 'my', 'live', 'dating', 'speaks', 'fast', 'We', 'as', 'morning', 'UK', 'daily', 'there', 'Had', 'with', 'lot', 'offer', 'in', 'My', 'much', 'many', 'She', 'questions', 'run', 'slowly', 'to', 'people', 'tour', 'meat', 'here', 'local', 'He', 'back', \"n't\", 'for', 'this', 'did', 'have', 'company', 'you', 'wife', 'They', 'time', 'Do', 'they', 'early', 'advice', 'France', 'money', 'does', 'useful', '?', 'had', 'told'}\n",
             "\n",
             "Test predictions:\n",
             "? <- Do you know who lives here ?\n",
