--- a/Tarea_2_Language_Modeling_y_Naïve_Bayes.ipynb
+++ b/Tarea_2_Language_Modeling_y_Naïve_Bayes.ipynb
@@ -30,7 +30,7 @@
       "source": [
         "# **Tarea 2 - CC6205 Natural Language Processing 📚**\n",
         "\n",
-        "**Integrantes:**\n",
+        "**Integrantes:** Marcelo Rojas y Cristóbal Pérez.\n",
         "\n",
         "**Fecha límite de entrega 📆:** Martes 18 de abril.\n",
         "\n",
@@ -492,7 +492,7 @@
         "      )\n",
         "    return probs    "
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -507,7 +507,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -680,7 +680,7 @@
       "metadata": {
         "id": "JjTnFLDGyCEL"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -697,7 +697,7 @@
         "id": "qN1SdLycuK4W",
         "outputId": "6525be02-cd81-4143-a373-60c4d53fb8fa"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -752,7 +752,7 @@
         },
         "outputId": "63567ea9-23a0-4f41-94e3-dc59407b566c"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -803,7 +803,7 @@
         },
         "outputId": "c2e12e76-198a-4bdb-d3aa-0bd5a8a4925d"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -884,7 +884,7 @@
         "print(\"\\nDocumentos de prueba:\")\n",
         "print(X_test)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -940,7 +940,7 @@
         "print('\\nTest predictions:')\n",
         "print('\\n'.join(['{} <- {}'.format(c, ' '.join(s)) for c, s in zip(my_clf.predict(X_test), X_test['words'])]))"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1049,7 +1049,7 @@
         "print(\"\\nDocumentos de prueba:\")\n",
         "print(X_test2)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1154,7 +1154,7 @@
         "print('\\n'.join(['{} <- {}'.format(c, ' '.join(s)) for c, s in zip(my_y_preds, X_test2['words'])]))\n",
         "print(classification_report(y_true=X_test2['class_'], y_pred=my_y_preds, target_names=['?', '+', '-']))"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
