--- a/Tarea_3_Word_Embeddings.ipynb
+++ b/Tarea_3_Word_Embeddings.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -121,7 +120,24 @@
         "\n",
         "Especifique: representación de los documentos de entrada, parámetros del modelo, transformaciones necesarias para obtener la probabilidad de cada etiqueta y función de pérdida escogida. **(0.75 puntos)**\n",
         "\n",
-        "**Respuesta**: \n"
+        "**Respuesta**: \n",
+        "\n",
+        "Del dataset dado, se obtiene una representación TF-IDF del mismo que corresponderá al input del modelo, denominado por $\\vec{X}$, dónde en las columnas se encuentra el vocabulario del dataset, en las filas los documentos y en cada entrada el TF-IDF correspondiente.\n",
+        "\n",
+        "Para la clasificación de los documentos se utilizará el modelo log-lineal multiclase, dónde el output viene dado por:\n",
+        "$$\\vec{\\hat{y} } = softmax( \\vec{X}*W + \\vec{b})$$\n",
+        "con $softmax(\\vec{z})_{[i]} = \\frac{e^{\\vec{x}_{[i]}}}{ \\sum_{j} e^{\\vec{x}_{[j]}} }$\n",
+        "\n",
+        "Así:\n",
+        "$$\\vec{\\hat{y}}_{[i]} = \\frac{e^{(\\vec{x}*W + \\vec{b})_{[i]}}}{ \\sum_{j} e^{(\\vec{x}*W + \\vec{b})_{[j]}} }$$\n",
+        "\n",
+        "Con la transformación softmax se forza a que los valores de las componentes de $\\vec{\\hat{y}}$ sean positivas y sumen uno, siendo así la probabilidad de pertenencia a cada clase.\n",
+        "\n",
+        "Los parámetros del modelo son $W$ y $\\vec{b}$, y la función de pérdida corresponderá a la cross-entropy, dada por:\n",
+        "\n",
+        "$$L_{cross-entropy}(\\vec{\\hat{y}},\\vec{y}) = -\\sum_{i} \\vec{y}_{[i]}*log(\\vec{\\hat{y}}_{[i]})$$\n",
+        "\n",
+        "Se utiliza esta función de pérdida, ya que e objetivo buscado es obtener una interpretación probabilística dede los scores de cada clase."
       ]
     },
     {
@@ -132,7 +148,26 @@
       "source": [
         "**Pregunta 2**: Explique cómo funciona el proceso de entrenamiento en este tipo de modelos y su evaluación. **(0.75 puntos)**\n",
         "\n",
-        "**Respuesta**: "
+        "**Respuesta**:\n",
+        "\n",
+        "Para el entrenamiento del modelo log-lineal se encontrar los parámetros $W$ y $\\vec{b}$ que minimizan la pérdida, esto queda escrito como:\n",
+        "$$\\hat{\\Theta} = (W,\\vec{b}) = argmin_{\\Theta} \\frac{1}{n} \\sum_{i=1}^{n} L_{cross-entropy}(\\vec{\\hat{y}},\\vec{y})$$\n",
+        "\n",
+        "$$= argmin_{(W,\\vec{b})} \\frac{1}{n} \\sum_{i=1}^{n} L_{cross-entropy}(softmax( \\vec{X}*W + \\vec{b}),\\vec{y}) $$\n",
+        "\n",
+        "En consecuencia de no tener una solución cerrada, se utiliza el algoritmo de descenso de gradiente estocástico, que consiste de:\n",
+        "\n",
+        "* Inicializar los parámetros con valores aleatorios o cero.\n",
+        "* Por cada iteración se calcula la pérdida con los valores actuales de los parámetros.\n",
+        "* Luego se actualizan siguiendo la siguiente regla hasta su convergencia:\n",
+        "* $\\Theta = \\Theta - ŋ*\\nabla_{\\Theta}L_{cross-entropy}(\\vec{\\hat{y}},\\vec{y})$\n",
+        "\n",
+        "Los criterios de convergencia se definen antes, y se pueden utilizar: número de iteraciones determinado o el tamaño del paso dado entre iteraciones es menor a un umbral especificado.\n",
+        "\n",
+        "Como se busca obtener un modelo capaz de generalizar, se utiliza un split de la data, generando sub sets para entrenamiento, validación y test, de esta forma, con el dataset de entrenamiento se entrena el modelo, con el de validación se obtienen los valores óptimos de los hiperparámetros, y en testing se pone a prueba la performance del modelo utilizando una métrica de desempeño ad-hoc al problema de clasificación como *accuracy, presicion o recall*, entre otras.\n",
+        "\n",
+        "---\n",
+        "El valor de ŋ corresponde a un hiperparámetro del modelo."
       ]
     },
     {
