--- a/Tarea_3_Word_Embeddings.ipynb
+++ b/Tarea_3_Word_Embeddings.ipynb
@@ -210,17 +210,49 @@
         "**Respuesta**: \n",
         "\n",
         "Formula:\n",
-        "$\\vec{\\hat{y}} = NN_{MLP3}(\\vec{x}) =$\n",
+        "\n",
+        "Si $f,g,h$ son las funciones de activación desde la primera capa a la tercera, y utilizando la notación vista en clases:\n",
+        "$$\\vec{\\hat{y}} = NN_{MLP3}(\\vec{x}) = (h(g(f(\\vec{x}W^1 + \\vec{b^1})W^2 + \\vec{b^2}))W^3 + \\vec{b^3})W^4$$\n",
         "\n",
         "Dimensiones: \n",
+        "\n",
+        "Como $\\vec{x}$ está en $\\Re^3$:\n",
+        "\n",
+        "$dim(W^1)={3x2}$ y $dim(\\vec{b^1})={2}$\n",
+        "\n",
+        "$dim(W^2)={2x3}$ y $dim(\\vec{b^2})={3}$\n",
+        "\n",
+        "$dim(W^3)={3x1}$ y $dim(\\vec{b^1})=1$\n",
+        "\n",
+        "$dim(W^4)={1x4}$\n",
         "\n",
         "**Pregunta 2**: Explique qué es backpropagation. ¿Cuales serían los parámetros a evaluar en la red neuronal anterior durante backpropagation? **(0.25 puntos)**\n",
         "\n",
         "**Respuesta**:\n",
         "\n",
+        "Es un método para evaluar el gradiente de una función de pérdida $L$, para una red neuronal feed-forward, con respecto a todos sus parámetros, que utiliza la regla de la cadena y programación dinámica.\n",
+        "\n",
+        "Los parámetros a evaluar en la raed anterior durante backpropagation, son $W^1,W^2,W^3,W^4$ y $\\vec{b^1},\\vec{b^2},\\vec{b^3}$ .\n",
+        "\n",
         "**Pregunta 3**: Explique los pasos de backpropagation. En la red neuronal anterior: Cuales son las derivadas que debemos calcular para poder obtener $\\vec{\\delta^l_{[j]}}$ en todas las capas? **(0.5 puntos)**\n",
         "\n",
-        "**Respuesta**:"
+        "**Respuesta**:\n",
+        "\n",
+        "El algoritmo puede ser resumido en los siguientes pasos:\n",
+        "1.  Aplicar un vector de entrada $\\vec{x}$ a la red y propagar hacia adelante a través de la red utilizando (eq.1) y (eq.2) para encontrar las activaciones de todas las unidades ocultas y de salida.\n",
+        "$$eq.1: \\vec{h_{[j]}^{l}}=(\\sum_{i} W_{[i,j]}^{l}\\ x\\ \\vec{z_{[i]}^{l-1}})+\\vec{b_{j}^{l}}$$\n",
+        "$$eq.2:  \\vec{z_{[j]}^{l}}=g(\\vec{h_{[j]}^{l}})$$ con $\\vec{z_{[j]}^{0}} = \\vec{x_{[j]}}$\n",
+        "\n",
+        "2. Evaluar $\\vec{\\delta_{[j]}^{m}}$ para todas las unidades de salida.\n",
+        "\n",
+        "3. Hacer backpropagation en $\\vec{\\delta_{[k]}^{l+1}}$ utilizando (eq.3) para obtener $\\vec{\\delta_{[j]}^{l}}$ para cada capa oculta de la red. Pasando de las capas superiores a las inferiores de la red*.\n",
+        "$$eq.3: \\vec{\\delta_{[j]}^{l}}=g^{'}(\\vec{h_{[j]}^{l}})\\ x\\ \\sum_{k}(\\vec{\\delta_{[k]}^{l+1}}\\ x\\  W_{[j,k]}^{l+1})$$\n",
+        "\n",
+        "4. Evaluar las derivadas requeridas utilizando $\\frac{\\delta L}{\\delta W_{[i,j]}^{l}}=\\vec{\\delta_{[j]}^{l}}\\ x\\ \\vec{z_{[i]}^{l-1}}$\n",
+        "\n",
+        "\n",
+        "---\n",
+        "* Aquí vemos las derivadas que hay que computar para obtener $\\vec{\\delta_{[j]}^{l}}$ en cada capa.\n"
       ]
     },
     {
