--- a/Tarea_3_Word_Embeddings.ipynb
+++ b/Tarea_3_Word_Embeddings.ipynb
@@ -239,20 +239,22 @@
         "**Respuesta**:\n",
         "\n",
         "El algoritmo puede ser resumido en los siguientes pasos:\n",
-        "1.  Aplicar un vector de entrada $\\vec{x}$ a la red y propagar hacia adelante a través de la red utilizando (eq.1) y (eq.2) para encontrar las activaciones de todas las unidades ocultas y de salida.\n",
+        "1.  Aplicar un vector de entrada $\\vec{x}$ a la red y propagar hacia adelante a través de la red utilizando (eq.1)* y (eq.2) para encontrar las activaciones de todas las unidades ocultas y de salida.\n",
         "$$eq.1: \\vec{h_{[j]}^{l}}=(\\sum_{i} W_{[i,j]}^{l}\\ x\\ \\vec{z_{[i]}^{l-1}})+\\vec{b_{j}^{l}}$$\n",
         "$$eq.2:  \\vec{z_{[j]}^{l}}=g(\\vec{h_{[j]}^{l}})$$ con $\\vec{z_{[j]}^{0}} = \\vec{x_{[j]}}$\n",
         "\n",
         "2. Evaluar $\\vec{\\delta_{[j]}^{m}}$ para todas las unidades de salida.\n",
         "\n",
-        "3. Hacer backpropagation en $\\vec{\\delta_{[k]}^{l+1}}$ utilizando (eq.3) para obtener $\\vec{\\delta_{[j]}^{l}}$ para cada capa oculta de la red. Pasando de las capas superiores a las inferiores de la red*.\n",
+        "3. Hacer backpropagation en $\\vec{\\delta_{[k]}^{l+1}}$ utilizando (eq.3) para obtener $\\vec{\\delta_{[j]}^{l}}$ para cada capa oculta de la red. Pasando de las capas superiores a las inferiores de la red**.\n",
         "$$eq.3: \\vec{\\delta_{[j]}^{l}}=g^{'}(\\vec{h_{[j]}^{l}})\\ x\\ \\sum_{k}(\\vec{\\delta_{[k]}^{l+1}}\\ x\\  W_{[j,k]}^{l+1})$$\n",
         "\n",
         "4. Evaluar las derivadas requeridas utilizando $\\frac{\\delta L}{\\delta W_{[i,j]}^{l}}=\\vec{\\delta_{[j]}^{l}}\\ x\\ \\vec{z_{[i]}^{l-1}}$\n",
         "\n",
         "\n",
         "---\n",
-        "* Aquí vemos las derivadas que hay que computar para obtener $\\vec{\\delta_{[j]}^{l}}$ en cada capa.\n"
+        "*Los sesgos $\\vec{b}$ pueden ser excluidos de (eq.1), incluyéndolos en las matrices $W$ introduciendo una unidad adicional, o entrada, cuya activación se fija en +1.\n",
+        "\n",
+        "**Aquí vemos las derivadas que hay que computar para obtener $\\vec{\\delta_{[j]}^{l}}$ en cada capa, es decir las derivadas de las funciones $f,g,h$ ($g$ en la ecuación son las activaciones).\n"
       ]
     },
     {
