--- a/Tarea_3_Word_Embeddings.ipynb
+++ b/Tarea_3_Word_Embeddings.ipynb
@@ -254,7 +254,13 @@
         "---\n",
         "*Los sesgos $\\vec{b}$ pueden ser excluidos de (eq.1), incluyéndolos en las matrices $W$ introduciendo una unidad adicional, o entrada, cuya activación se fija en +1.\n",
         "\n",
-        "**Aquí vemos las derivadas que hay que computar para obtener $\\vec{\\delta_{[j]}^{l}}$ en cada capa, es decir las derivadas de las funciones $f,g,h$ ($g$ en la ecuación son las activaciones).\n"
+        "**Aquí vemos las derivadas que hay que computar para obtener $\\vec{\\delta_{[j]}^{l}}$ en cada capa, es decir las derivadas de las funciones $f,g,h$ ($g$ en la ecuación son las activaciones).\n",
+        "\n",
+        "Así:\n",
+        "$$\\vec{\\delta^4} = \\frac{\\delta L}{\\delta \\vec{\\hat{y}}}$$\n",
+        "$$\\vec{\\delta^3} = h^{'}(\\vec{h^3})\\vec{\\delta^4}W^4 $$ \n",
+        "$$\\vec{\\delta^2} = g^{'}(\\vec{h^2})\\vec{\\delta^3}W^3$$\n",
+        "$$\\vec{\\delta^1} = f^{'}(\\vec{h^1})\\vec{\\delta^2}W^2$$\n"
       ]
     },
     {
@@ -402,7 +408,7 @@
         "logging.basicConfig(format='%(asctime)s : %(levelname)s : %(message)s', level=logging.INFO)\n",
         "logger = logging.getLogger(__name__)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -426,7 +432,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -456,7 +462,7 @@
         "stopwords = Counter(stopwords.flatten().tolist())\n",
         "df = df.dropna().reset_index(drop=True) # Quitar filas vacias"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -667,7 +673,7 @@
         "AFINN = '/content/CC6205-NLP/AFINN_full.csv'\n",
         "df_afinn = pd.read_csv(AFINN, sep='\\t', header=None)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -683,7 +689,7 @@
           "height": 362
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -877,7 +883,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -902,7 +908,7 @@
       "metadata": {
         "id": "hpUdDRvAWDIY"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -917,7 +923,7 @@
       "metadata": {
         "id": "lDckJneHYc-k"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -928,7 +934,7 @@
       "metadata": {
         "id": "1ZuMzpigZZtx"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -944,7 +950,7 @@
           "height": 423
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1154,7 +1160,7 @@
       "metadata": {
         "id": "EN4Q1VqYZeHh"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1166,7 +1172,7 @@
       "metadata": {
         "id": "pJF3FDcbZh32"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1177,7 +1183,7 @@
       "metadata": {
         "id": "tun0BfxWZlId"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1188,7 +1194,7 @@
       "metadata": {
         "id": "qH6xs8NxZvPz"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1199,7 +1205,7 @@
       "metadata": {
         "id": "JiWVoYdqZo0Y"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1214,7 +1220,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1245,7 +1251,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1277,7 +1283,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1302,7 +1308,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
